crates/rongroi-collectors/tests/snapshots/report_snapshot__powershell_text_present_full_ss_view.snap
---
source: crates/rongroi-collectors/tests/report_snapshot.rs
expression: "view::for_mode(&report, Mode::Ss)"
---
{
  "mode": "ss",
  "header": {
    "schema_version": 1,
    "provenance": {
      "official": false,
      "version": "0.0.0-test",
      "commit": null,
      "exe_sha256": null
    },
    "rules_bundle": {
      "schema_version": 4,
      "sha256": "[bundle sha256]",
      "rule_count": 65
    },
    "platform": "windows",
    "os_build": "26100",
    "elevated": true,
    "generated_at": "2026-01-01T00:00:00Z",
    "boot_time": {
      "state": "unmeasured",
      "reason": "read_failed"
    },
    "scan_tier": "full",
    "anchors": [
      {
        "anchor": "install_date",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "setup_earliest_install",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "usn_journal_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "system_drive_root_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "recycle_bin_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_app_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_enhanced_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ]
  },
  "evidence": [
    {
      "rule_id": "72820eaf-1469-4ea7-bb0f-17f145d26dfc",
      "collector": "autostart",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "d7191cf3-ce56-480b-8501-66a198f83e08",
      "collector": "defender_exclusion",
      "strength": "posture",
      "state": "not_found",
      "retention": "Defender's exclusions as they were when the scan ran. An exclusion removed before the scan is not seen."
    },
    {
      "rule_id": "98f6e2b8-6d23-4202-bc7f-06587ebdd2f3",
      "collector": "driver_service",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "9b318bfa-805d-4edd-81f1-602b57639a69",
      "collector": "evtx",
      "strength": "tamper",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "87a53c8f-b0e4-477d-91e7-93b904ba965f",
      "collector": "evtx",
      "strength": "tamper",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "2dc11b64-72a2-48f5-a273-985e906d5a9e",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "148cbcdd-8d18-4af6-a541-71cc7f21b2eb",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "d5531c55-1a65-4698-9f39-7cf79bbbb7ba",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "061797d3-161d-4783-89e6-caf658973436",
      "collector": "fivem_dir",
      "strength": "presence",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "282115fe-863d-4e2e-9cf5-4eaf8e7545e4",
      "collector": "fivem_dir",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "c402aedc-1ed7-49a6-998c-0762e17e9bd0",
      "collector": "fivem_servers",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "fd58dec6-84c1-49cb-806c-10b4614a046f",
      "collector": "install_marker",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "65ee0ec1-bcda-47a3-a401-98632b42e75f",
      "collector": "net_config",
      "strength": "posture",
      "state": "not_found",
      "retention": "The hosts file as it was when the scan ran. A line removed before the scan is not seen."
    },
    {
      "rule_id": "75162c70-a6d1-47ec-94af-be25184d5ece",
      "collector": "posture",
      "strength": "posture",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "98ee9213-39f3-4219-b2ac-f2bb3d21d6cc",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the PC was configured in the past."
    },
    {
      "rule_id": "e9f05cfb-6618-42ca-b4bf-f57f2e9ba8c7",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the account was configured in the past."
    },
    {
      "rule_id": "88eb2aca-a33e-414d-bd0f-cfb87af95a2d",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the PC was configured in the past."
    },
    {
      "rule_id": "869c34b6-7b32-4f56-a281-9f5ac00e43c4",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current setting only. It says nothing about how the account was configured in the past."
    },
    {
      "rule_id": "dc858978-954d-418f-a42e-29f06975f4ed",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "a4af8cdc-a009-42ee-8368-7f35e93051fe",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "d2f86e75-7692-468e-88a2-52eb1e24dc30",
      "collector": "posture",
      "strength": "posture",
      "state": "not_found",
      "retention": "Current state only. It says nothing about how the PC was set up in the past."
    },
    {
      "rule_id": "66d513b5-fe61-415a-9385-9d01f85c3ef5",
      "collector": "posture",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "b97cb4c6-9dac-47f4-a974-ce17f07d6fc5",
      "collector": "powershell_text",
      "strength": "tamper",
      "state": "found",
      "observations": [
        {
          "collector": "powershell_text",
          "fields": {
            "count": 1,
            "decoded": false,
            "defender_tamper": true,
            "download_then_execute": false,
            "encoded_command": false,
            "execution_policy_bypass": false,
            "file": "console_host",
            "game_process": false,
            "hidden_window": false,
            "invoke_expression": false,
            "native_interop": false,
            "newest_from_end": 2,
            "remote_download": false,
            "source": "history",
            "trace_cleanup": false
          }
        }
      ]
    },
    {
      "rule_id": "2b4a3f03-e520-44d4-ad91-77f5d7857d71",
      "collector": "powershell_text",
      "strength": "presence",
      "state": "found",
      "observations": [
        {
          "collector": "powershell_text",
          "fields": {
            "count": 1,
            "decoded": false,
            "defender_tamper": false,
            "download_host": "%DOWNLOAD_HOST%",
            "download_then_execute": true,
            "encoded_command": false,
            "execution_policy_bypass": false,
            "file": "console_host",
            "game_process": false,
            "hidden_window": false,
            "invoke_expression": true,
            "native_interop": false,
            "newest_from_end": 4,
            "remote_download": true,
            "source": "history",
            "trace_cleanup": false
          }
        }
      ]
    },
    {
      "rule_id": "8d4941c6-3ca2-4ff7-8fce-8d1d2fcc7c8d",
      "collector": "powershell_text",
      "strength": "tamper",
      "state": "found",
      "observations": [
        {
          "collector": "powershell_text",
          "fields": {
            "count": 1,
            "decoded": false,
            "defender_tamper": false,
            "download_then_execute": false,
            "encoded_command": false,
            "execution_policy_bypass": false,
            "file": "console_host",
            "game_process": false,
            "hidden_window": false,
            "invoke_expression": false,
            "native_interop": false,
            "newest_from_end": 1,
            "remote_download": false,
            "source": "history",
            "trace_cleanup": true
          }
        }
      ]
    },
    {
      "rule_id": "1c73241b-b7f1-4f91-81d4-8de53db6d119",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "7996285e-8ccf-4b2d-8fec-339a32b95931",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "91dc8b45-8355-4554-8a6d-e979e4a95ecd",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "7d7adb92-2c47-4ff5-94ec-dd8a2f9e453d",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "926b3863-8f4f-4d18-aab6-26b77934466e",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    },
    {
      "rule_id": "8a39617a-30d6-4fc0-9b20-cb4f899985d5",
      "collector": "usn",
      "strength": "context",
      "state": "unmeasured",
      "reason": "read_failed",
      "expected": false
    }
  ],
  "own_traces": [],
  "unmatched": [],
  "scope": {
    "not_admin": 0,
    "not_attempted": 0,
    "not_consented": 0
  },
  "listed": {
    "found": 3,
    "not_found": 10,
    "unmeasured": 18
  },
  "hidden": {
    "not_found": 5,
    "unmeasured_expected": 16,
    "unmeasured_unexpected": 0,
    "unmatched": 29
  },
  "timeline": {
    "entries": [
      {
        "at": "2018-07-09T20:49:14.0577461Z",
        "collector": "evtx",
        "field": "oldest_record_time",
        "place": null,
        "source": {
          "kind": "selector",
          "selector_id": "87b47713-1ed3-415e-bc07-9cd0b953d7c1"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Microsoft-Windows-PowerShell%4Operational.evtx"
      },
      {
        "at": "2018-08-03T06:44:06.4185334Z",
        "collector": "evtx",
        "field": "newest_record_time",
        "place": null,
        "source": {
          "kind": "selector",
          "selector_id": "87b47713-1ed3-415e-bc07-9cd0b953d7c1"
        },
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Microsoft-Windows-PowerShell%4Operational.evtx"
      },
      {
        "at": "2026-01-01T00:00:00Z",
        "collector": null,
        "field": "generated_at",
        "place": null,
        "source": {
          "kind": "anchor"
        },
        "subject": null
      }
    ],
    "bands": [
      {
        "collector": "evtx",
        "place": null,
        "subject": "C:\\Windows\\System32\\winevt\\Logs\\Microsoft-Windows-PowerShell%4Operational.evtx",
        "from": "2018-07-09T20:49:14.0577461Z",
        "to": "2018-08-03T06:44:06.4185334Z"
      }
    ],
    "unmeasured": [
      {
        "collector": "bam",
        "reason": "source_absent"
      },
      {
        "collector": "fivem_dir",
        "place": "plugins",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_exe",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_exe",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_logs",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_crashes",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_cache",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_server_cache",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_server_cache",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_server_cache",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_server_cache",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_servers",
        "reason": "read_failed"
      },
      {
        "collector": "pca",
        "reason": "read_failed"
      },
      {
        "collector": "powershell_text",
        "place": "engine_start",
        "reason": "source_absent"
      },
      {
        "collector": "prefetch",
        "reason": "source_absent"
      },
      {
        "collector": "usn",
        "reason": "read_failed"
      }
    ]
  },
  "collector_order": [
    "posture",
    "driver_service",
    "autostart",
    "defender_exclusion",
    "fivem_dir",
    "fivem_servers",
    "net_config",
    "process",
    "evtx",
    "powershell_text",
    "prefetch",
    "bam",
    "pca",
    "usn"
  ],
  "trace_ages": {
    "anchors": [
      {
        "anchor": "boot_time",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "install_date",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "setup_earliest_install",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "anchor": "usn_journal_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "system_drive_root_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "recycle_bin_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_legacy_app_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "anchor": "fivem_enhanced_program_folder_created",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ],
    "rows": [
      {
        "collector": "fivem_dir",
        "place": "legacy_logs",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_crashes",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "legacy_server_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_logs",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_crashes",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_launcher_crashes",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "fivem_dir",
        "place": "enhanced_server_cache",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "evtx",
        "subject": "Microsoft-Windows-CodeIntegrity%4Operational.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "evtx",
        "subject": "Microsoft-Windows-PowerShell%4Operational.evtx",
        "state": "measured",
        "oldest": "2018-07-09T20:49:14.0577461Z",
        "days_before": 2732,
        "count": 17,
        "extra": {
          "size_bytes": 69632
        }
      },
      {
        "collector": "evtx",
        "subject": "Microsoft-Windows-Windows Defender%4Operational.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "evtx",
        "subject": "Security.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "evtx",
        "subject": "System.evtx",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "prefetch",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "bam",
        "state": "unmeasured",
        "reason": "source_absent"
      },
      {
        "collector": "pca",
        "state": "unmeasured",
        "reason": "read_failed"
      },
      {
        "collector": "usn",
        "place": "journal",
        "state": "unmeasured",
        "reason": "read_failed"
      }
    ]
  }
}
